--- a/code/site/src/main/webapp/WEB-INF/web.xml
+++ b/code/site/src/main/webapp/WEB-INF/web.xml
@@ -24,35 +24,35 @@
 		</param-value>
 	</context-param>
 
-	<listener>
-		<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
-	</listener>
+	<!--<listener>-->
+		<!--<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>-->
+	<!--</listener>-->
 	
-	<filter>
-		<filter-name>springSecurityFilterChain</filter-name>
-		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-	</filter>
-	<filter-mapping>
-		<filter-name>springSecurityFilterChain</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
+	<!--<filter>-->
+		<!--<filter-name>springSecurityFilterChain</filter-name>-->
+		<!--<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>-->
+	<!--</filter>-->
+	<!--<filter-mapping>-->
+		<!--<filter-name>springSecurityFilterChain</filter-name>-->
+		<!--<url-pattern>/*</url-pattern>-->
+	<!--</filter-mapping>-->
 
-	<servlet>
-		<servlet-name>springDispatcherServlet</servlet-name>
-		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<init-param>
-			<param-name>contextConfigLocation</param-name>
-            <param-value>
-                /WEB-INF/spring.xml,
-                /WEB-INF/spring/spring-security.xml,
-                /WEB-INF/spring/spring-users.xml
-            </param-value>
-		</init-param>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>springDispatcherServlet</servlet-name>
-		<url-pattern>*.html</url-pattern>
-	</servlet-mapping>
+	<!--<servlet>-->
+		<!--<servlet-name>springDispatcherServlet</servlet-name>-->
+		<!--<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>-->
+		<!--<init-param>-->
+			<!--<param-name>contextConfigLocation</param-name>-->
+            <!--<param-value>-->
+                <!--/WEB-INF/spring.xml,-->
+                <!--/WEB-INF/spring/spring-security.xml,-->
+                <!--/WEB-INF/spring/spring-users.xml-->
+            <!--</param-value>-->
+		<!--</init-param>-->
+	<!--</servlet>-->
+	<!--<servlet-mapping>-->
+		<!--<servlet-name>springDispatcherServlet</servlet-name>-->
+		<!--<url-pattern>*.html</url-pattern>-->
+	<!--</servlet-mapping>-->
 
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
